# guided-dora

./: .gitignore  README.md  dino.py  environment.yaml  linear_eval.py  parser.py  pyproject.toml  requirements.txt  train.py
configs/: base.yaml
methods/: dora.py
seguidora/methods/: __init__.py  dino.py  seguidora.py
